editting customer items

--- a/public/templates/viewCustomer.html
+++ b/public/templates/viewCustomer.html
@@ -2,10 +2,10 @@
     <h3 class="large-10 large-offset-2 columns">{{customer.first_name}} {{customer.last_name}}</h3>
     <p  class="small-10 small-offset-2 columns">e-mail: {{customer.email}}</p>
     <h4 class="small-10 small-offset-2 columns">Items:</h4>
-    <a class="small-8 small-offset-2 columns" ng-href="#/item/create">Create item</a>
+    <a class="small-8 small-offset-2 columns" ng-href="#/customer/{{customer.id}}/item/create">Create item</a>
     <div class="small-9 small-offset-3 columns" ng-repeat="item in customer.items">
-        <a class="button small-7 columns" ng-href="#/item/edit/{{item.id}}">{{item.name}}</a>
-        <a class="button small-4 columns" ng-href="#/item/delete/{{item.id}}">delete</a>
+        <a class="button small-7 columns" ng-href="#/customer/{{customer.id}}/item/edit/{{item.id}}">{{item.name}}</a>
+        <a class="button small-4 columns" ng-href="#/customer/{{customer.id}}/item/delete/{{item.id}}">delete</a>
     </div>
     <h4 class="small-10 small-offset-2 columns">Unpaid invoices:</h4>
     <div class="small-9 small-offset-3 columns" ng-repeat="invoice in customer.invoices.unpaid">
